# video-agent

./: .claudeignore  .gitignore  README.md  pyproject.toml  pytest.ini  setup.sh
scripts/: generate_test_media.py  render_from_orchestrator.py  run_integration_render_real.sh  video.py
tools/: README.md  __init__.py  cli.py  conftest.py  pytest.ini  requirements.txt
tools/renderer/: __init__.py  captions.py  ffmpeg_runner.py  placeholder.py  preview_local.py
tools/schemas/: __init__.py  asset_manifest.py  render_output.py  render_plan.py
tools/tests/: _fixture_builders.py  conftest.py
tools/tests/golden/: generate_golden.py  test_preview_golden.py
tools/tests/golden/expected/: .gitkeep  render_preview_5shots.framemd5
tools/tests/integration/: test_e2e_render_pipeline.py  test_render_cli_smoke.py  test_smoke_render.py  test_video_cli.py  test_video_render_cli.py
tools/tests/unit/: test_placeholder.py  test_preview_local.py  test_schemas.py
