[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-agent"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0",
    "pillow>=10",
]

[project.scripts]
video = "tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
